--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -193,6 +193,7 @@ nav {
 .button--close-burger-menu {
 	position: relative;
 	width: 90%;
+	margin-bottom: 2rem;
 
 	button{
 		background-color: $black;
